# CTCF

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CTCF_before_ctrl.txt  PROJECT_STRUCTURE_first_pack.txt  README.md  diff_models.txt  environment.yml  environment_clear.yml  guide.md  parse.py  parse_ctcf.py  pyproject.toml
TransMorph/: train_CTCF_v2.py  train_TransMorph.py  train_TransMorph_v2.py
TransMorph/archive/: train_CTCF.py  train_TM_baseline.py
TransMorph/data/: datasets.py  trans.py
TransMorph/models/: TransMorph.py  cascade.py  configs_CTCF.py  configs_TransMorph.py  utils_field.py  utils_train.py  wrappers.py
datasets/: IXI.py  OASIS.py  synthetic.py
experiments/: engine.py  inference.py  train_CTCF.py  train_CTCF_synth.py  train_CorrMLP.py  train_EfficientMorph.py  train_LKUNet.py  train_MambaMorph.py  train_SACB.py  train_TransMorphDCA.py  train_UTSRMorph.py  train_VMambaMorph.py  train_VoxelMorph.py
experiments/IXI/: datasets.py  train_TM-DCA_IXI.py  train_TransMorph_Dwin_bspl.py  train_UTSRMorph_ixi.py
experiments/OASIS/: datasets.py  inference.py  plot_bars.py  train_CTCF.py  train_TM-DCA.py  train_UTSRMorph.py
experiments/core/: cli_args.py  cli_common.py  cli_ctcf.py  cli_inference.py  data_loaders.py  helpers.py  inference_metrics.py  inference_runtime.py  model_adapters.py  path_profiles.py  train_logging.py  train_rules.py  train_runtime.py
models/CTCF/: __init__.py  blocks.py  cascade_nets.py  configs.py  controller.py  lambda_net.py  model.py  refiner.py  stages.py  ut_blocks.py
models/CorrMLP/: wrapper.py
models/EfficientMorph/: configs.py  model.py  wrapper.py
models/LKUNet/: configs.py  model.py  wrapper.py
models/MambaMorph/: configs.py  model.py  wrapper.py
models/SACB/: SACB1.py  model.py  utils.py  wrapper.py
models/TransMorph_DCA/: __init__.py  configs.py  model.py
models/UTSRMorph/: configs.py  (+1 more)
tools/: RemoteVM.md  ablation.sh  ablation_vm.sh  aggregate_cross_eval.py  aggregate_results.py  aggregate_sedm_results.py  compute_stats.py  count_params.py  cross_dataset_eval.sh  inference.py  inference_msit.py  install_mamba.sh  model_complexity.py  phase6_solo_oasis.sh  phase7_cascade_oasis.sh  phase7_solo_controls_oasis.sh  phase8_cascade.sh  phase9_subA_fill_matrix.sh  phase9_subB_inference_pack.sh  plot_bars.py  remote_setup.sh  run_cross_inference.sh  run_experiments.sh  sedm_svf_gap_nosvf.sh  sync_results.sh  upload_data.sh  visualize_l3_error.py
tools (expired)/: aggregate_results.py  count_params.py
utils/: __init__.py  common.py  coord_nets.py  core.py  ctcf_losses.py  data.py  dice.py  field.py  losses.py  misc.py  runtime.py  spatial.py  train.py  trans.py  transforms.py  tto.py  validation.py
(+48 files in other folders)
