[project]
name = "ctcf"
version = "1.0.1"
description = "Cascade Transformer for Coarse-to-Fine — unsupervised deformable 3D brain MRI registration."
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "logs",
    "results",
    "LatexDiploma",
    "MDPI",
    "Статьи",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line too long — already handled by formatter
    "B008",   # default mutable arg — acceptable in some PyTorch patterns
    "N812",   # lowercase imported as non-lowercase — torch.nn.functional as F
    "N806",   # variable in function should be lowercase — allow e1/e2/b/d1/d2 UNet convention
    "N803",   # argument name should be lowercase — allow K, N as math constants
    "SIM108", # use ternary — sometimes block if/else is clearer
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]                    # re-exports without __all__
"experiments/**/*.py" = ["E402"]             # sys.path manipulation before imports in entry scripts
"models/TransMorph_DCA/**/*.py" = ["N", "B", "SIM", "UP", "RUF"]  # vendored upstream code — touch minimally
"models/UTSRMorph/**/*.py" = ["N", "B", "SIM", "UP", "RUF"]
"models/EfficientMorph/**/*.py" = ["N", "B", "SIM", "UP", "RUF"]
"models/LKUNet/**/*.py" = ["N", "B", "SIM", "UP", "RUF"]
"models/MambaMorph/**/*.py" = ["N", "B", "SIM", "UP", "RUF"]
"models/VMambaMorph/**/*.py" = ["N", "B", "SIM", "UP", "RUF"]
"models/VoxelMorph/**/*.py" = ["N", "B", "SIM", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["models", "experiments", "utils", "datasets", "tools"]
combine-as-imports = true

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["e1", "e2", "d1", "d2", "f0", "f1", "f2", "phi_*", "delta_*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = [
    "logs/",
    "results/",
    "LatexDiploma/",
    "models/TransMorph_DCA/",
    "models/UTSRMorph/",
    "models/EfficientMorph/",
    "models/LKUNet/",
    "models/MambaMorph/",
    "models/VMambaMorph/",
    "models/VoxelMorph/",
]
